--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -191,6 +191,7 @@
         <CheckBox
             android:id="@+id/hard_decoder_box"
             android:focusable="true"
+            android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
