--- a/app/src/main/res/layout/item_window.xml
+++ b/app/src/main/res/layout/item_window.xml
@@ -12,9 +12,12 @@
         <com.ook.android.showview.MeetingGLSurfaceView
             android:id="@+id/gl_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent" />
+
+<!--        <TextureView-->
+<!--            android:id="@+id/item_texture"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent" />-->
 
         <TextView
             android:id="@+id/self_close_tv"
@@ -117,14 +120,14 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
-            android:text="0"/>
+            android:text="1"/>
 
         <Button
             android:id="@+id/btn2"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
-            android:text="1"/>
+            android:text="2"/>
 
 
         <Button
@@ -132,14 +135,14 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
-            android:text="2"/>
+            android:text="3"/>
 
         <Button
             android:id="@+id/btn4"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
-            android:text="3"/>
+            android:text="4"/>
 
     </LinearLayout>
 
