fix:图像模糊，内存泄漏等

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:paddingStart="15dp"
-    android:paddingEnd="15dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
     tools:context=".activity.LoginActivity">
 
     <LinearLayout
@@ -19,7 +19,7 @@
             android:text="账号："
             style="@style/LabelStyle" />
 
-        <android.support.v7.widget.AppCompatEditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/account_et"
             android:hint="请输入账号"
             style="@style/InputStyle" />
@@ -36,7 +36,7 @@
             android:text="密码："
             style="@style/LabelStyle" />
 
-        <android.support.v7.widget.AppCompatEditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/pwd_et"
             android:hint="请输入密码"
             android:inputType="text"
@@ -46,16 +46,30 @@
 
     <Button
         android:id="@+id/login_btn"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="登录"/>
 
     <Button
         android:id="@+id/register_btn"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="注册"/>
+
+    <Button
+        android:id="@+id/forget_btn"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="重置密码"/>
+    
+    <Button
+        android:id="@+id/set_btn"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="配置服务器"/>
 
 </LinearLayout>
