--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
                 android:text="手机号："
                 style="@style/LabelStyle" />
 
-            <android.support.v7.widget.AppCompatEditText
+            <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/register_account_et"
                 android:hint="请输您的手机号"
                 style="@style/InputStyle" />
@@ -50,7 +50,7 @@
                 android:text="验证码："
                 style="@style/LabelStyle" />
 
-            <android.support.v7.widget.AppCompatEditText
+            <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/register_code_et"
                 android:hint="请输验证码"
                 android:layout_width="0dp"
@@ -76,7 +76,7 @@
                 android:text="密码："
                 style="@style/LabelStyle" />
 
-            <android.support.v7.widget.AppCompatEditText
+            <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/register_pwd_et"
                 android:hint="请输您的密码"
                 style="@style/InputStyle" />
@@ -87,8 +87,8 @@
             android:id="@+id/register_confirm_btn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="20dp"
-            android:text="注册" />
+            android:layout_margin="15dp"
+            android:text="注册/重置" />
 
     </LinearLayout>
 
