--- a/app/src/main/res/layout/item_window.xml
+++ b/app/src/main/res/layout/item_window.xml
@@ -2,15 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <FrameLayout
+            android:id="@+id/fl_view"
             app:layout_constraintDimensionRatio="16:9"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -18,15 +18,15 @@
             android:layout_width="0dp"
             android:layout_height="0dp">
 
-            <com.ook.android.showview.MeetingGLSurfaceView
+            <com.ook.android.ikPlayer.VcsPlayerGlTextureView
                 android:id="@+id/gl_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <!--        <TextureView-->
-            <!--            android:id="@+id/item_texture"-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="match_parent" />-->
+<!--                    <TextureView-->
+<!--                        android:id="@+id/item_texture"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent" />-->
 
             <TextView
                 android:id="@+id/self_close_tv"
@@ -78,12 +78,14 @@
 
             <Button
                 android:id="@+id/close_video_btn"
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:text="关闭视频"/>
 
             <Button
                 android:id="@+id/kick_out_btn"
+                android:visibility="gone"
                 android:layout_gravity="end"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
@@ -91,6 +93,7 @@
 
             <Button
                 android:id="@+id/host_close_video_btn"
+                android:visibility="gone"
                 android:layout_gravity="end"
                 android:layout_marginTop="45dp"
                 android:layout_width="wrap_content"
@@ -99,6 +102,7 @@
 
             <Button
                 android:id="@+id/host_close_audio_btn"
+                android:visibility="gone"
                 android:layout_gravity="end"
                 android:layout_marginTop="90dp"
                 android:layout_width="wrap_content"
@@ -109,17 +113,17 @@
                 android:id="@+id/id_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
+                android:layout_gravity="center_horizontal|bottom"
                 android:layout_margin="5dp"
                 android:textColor="#fff"
                 android:textSize="16sp" />
 
         </FrameLayout>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:layout_width="264dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -137,7 +141,6 @@
             android:layout_height="40dp"
             android:text="2"/>
 
-
         <Button
             android:id="@+id/btn3"
             android:layout_width="0dp"
@@ -150,7 +153,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="40dp"
-            android:text="4"/>
+            android:text="1+2"/>
 
     </LinearLayout>
 
