--- a/app/src/main/res/layout/layout_preview_portrait.xml
+++ b/app/src/main/res/layout/layout_preview_portrait.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.WelcomeActivity">
 
-    <TextureView
+    <com.ook.android.ikPlayer.VcsPlayerGlTextureView
         android:id="@+id/cameraTextureView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -14,4 +14,4 @@
         android:layout_width="match_parent"
         android:layout_height="0dp" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
