--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,18 +22,13 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="PopDialog2" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- 背景颜色及透明程度 -->
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <!-- 是否有标题 -->
-        <item name="android:windowNoTitle">true</item>
-        <!--<item name="android:windowAnimationStyle">@style/dialog_fragment_animation</item>-->
-        <item name="android:windowSoftInputMode">stateUnspecified|adjustResize|stateHidden</item>
-        <!--<item name="android:backgroundDimAmount">0.4</item>&lt;!&ndash;透明度 0.0f到1.0f之间。1.0完全不透明，0.0f完全透明&ndash;&gt;-->
-        <!-- 是否浮现在activity之上 -->
+    <style name="TransAct" parent="Theme.AppCompat.Light.NoActionBar">
+<!--        <item name="android:windowBackground">@android:color/transparent</item>-->
+<!--        <item name="android:windowNoTitle">true</item>-->
         <item name="android:windowIsFloating">true</item>
-        <!-- 是否模糊 -->
-        <item name="android:backgroundDimEnabled">false</item>
-        <item name="android:windowContentOverlay">@null</item>
+<!--        <item name="android:backgroundDimEnabled">false</item>-->
+<!--        <item name="android:windowContentOverlay">@null</item>-->
     </style>
+
+
 </resources>
