--- a/app/src/main/res/layout/item_window.xml
+++ b/app/src/main/res/layout/item_window.xml
@@ -74,7 +74,7 @@
                 android:layout_gravity="bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:text="打开静音"/>
+                android:text="开静音"/>
 
             <Button
                 android:id="@+id/close_video_btn"
@@ -91,6 +91,7 @@
                 android:text="踢出"/>
 
             <Button
+                android:visibility="gone"
                 android:id="@+id/host_close_video_btn"
                 android:layout_gravity="end"
                 android:layout_marginTop="45dp"
@@ -100,6 +101,7 @@
 
             <Button
                 android:id="@+id/host_close_audio_btn"
+                android:visibility="gone"
                 android:layout_gravity="end"
                 android:layout_marginTop="90dp"
                 android:layout_width="wrap_content"
